--- a/TeslaRent_Server/Pages/User/ListUser.razor
+++ b/TeslaRent_Server/Pages/User/ListUser.razor
@@ -19,7 +19,7 @@
 @*123.3 Создаём таблицу вывода пользователей*@
 <div class="row mt-3">
     <div class="col">
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-hover table-responsive">
             <thead class="bg-info">
                 <tr>
                     <th>User ID</th>
@@ -53,11 +53,13 @@
                             <td>@item.User.LockoutEnd</td>
                             <td>@item.User.AccessFailedCount</td>
                             <td>
-                                 @((!string.IsNullOrWhiteSpace(item.Role.Name)) ? item.Role.Name : "--- NO ROLE ---")
+                                 @((!string.IsNullOrWhiteSpace(item.Role?.Name)) ? item.Role.Name : "--- NO ROLE ---")
                             </td>
                             <td>
-                                <button type="button" class="btn btn-primary" @onclick="(() =>EditHandler(item.User))">Edit</button>
-                                <button type="button" class="btn btn-danger" @onclick="(() =>DeletingHandler(item.User))">Delete</button>
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-primary" @onclick="(() =>EditHandler(item.User))"><i class="fa-regular fa-pen-to-square"></i></button>
+                                    <button type="button" class="btn btn-danger" @onclick="(() =>DeletingHandler(item.User))"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
                             </td>
                         </tr>
                     }
@@ -83,11 +85,11 @@
 
 @code {
     @*IEnumerable<IdentityUser> userList;*@
-    IEnumerable<IdentityRole> roleList;
-    IEnumerable<UserAndRole> usersWithRoles;
+    IEnumerable<IdentityRole>? roleList;
+    IEnumerable<UserAndRole>? usersWithRoles;
 
-    IdentityUser userForUpdating;
-    IdentityRole currentUserRole;
+    IdentityUser? userForUpdating;
+    IdentityRole? currentUserRole;
     bool ShowCloseModal = false;
 
     protected override async Task OnInitializedAsync()
