--- a/TeslaRent_Server/Pages/_Layout.cshtml
+++ b/TeslaRent_Server/Pages/_Layout.cshtml
@@ -8,7 +8,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />*@
+    <link rel="stylesheet" href="css/mdb.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="TeslaRent_Server.styles.css" rel="stylesheet" />
     @*35.2 Подключаем CSS файл*@
@@ -52,5 +53,6 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
     <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
+    <script type="text/javascript" src="~/js/mdb.min.js"></script>
 </body>
 </html>
