Client index page is done

--- a/TeslaRent_Client/Shared/NavMenu.razor
+++ b/TeslaRent_Client/Shared/NavMenu.razor
@@ -1,38 +1,90 @@
 ﻿@*152. Удаляем ВСЁ содержимое файла*@
 @*153. Создаём своё собственное меню*@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
-    <div class="container-fluid d-flex flex-row align-items-center">
-            <!-- Brand -->
-            <NavLink class="navbar-brand me-2 mb-1 d-flex align-items-center" href="/">
-                <img src="/Images/Logo_CSharp.jpg" height="50" alt="Logo" style="margin-top: 2px;" />
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-info sticky-top">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+        <!-- Toggle button -->
+        <button class="navbar-toggler"
+                type="button"
+                data-mdb-toggle="collapse"
+                data-mdb-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Navbar brand -->
+            <a class="navbar-brand mt-2 mt-lg-0" href="/">
+                <img src="/Images/Logo_CSharp.jpg"
+                     height="50"
+                     alt="Logo"/>
+            </a>
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+            </ul>
+            <!-- Left links -->
+        </div>
+        <!-- Collapsible wrapper -->
+        <!-- Right elements -->
+        <div class="d-flex align-items-center">
+            <!-- Icon -->
+            <a class="text-reset me-3" href="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+            <NavLink class="text-reset me-3" href="registration">
+                <i class="fa-solid fa-user-plus"></i>
+            </NavLink>
+            <NavLink class="text-reset me-3" href="login">
+                <i class="fa-solid fa-right-to-bracket"></i>
             </NavLink>
 
 
-            <div class="d-flex">
-                <NavLink class="navbar-brand me-2 mb-1 d-flex align-items-center" href="#">
-                    First
-                </NavLink>
-                <NavLink class="navbar-brand me-2 mb-1 d-flex align-items-center" href="#">
-                    Second
-                </NavLink>
-                <NavLink class="navbar-brand me-2 mb-1 d-flex align-items-center" href="#">
-                    Thrid
-                </NavLink>
-            </div>
+            
+            <!-- Avatar -->
+      @*      <div class="dropdown">
+                <a class="dropdown-toggle d-flex align-items-center hidden-arrow"
+                   href="#"
+                   id="navbarDropdownMenuAvatar"
+                   role="button"
+                   data-mdb-toggle="dropdown"
+                   aria-expanded="false">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+                         class="rounded-circle"
+                         height="25"
+                         alt="Black and White Portrait of a Man"
+                         loading="lazy" />
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end"
+                    aria-labelledby="navbarDropdownMenuAvatar">
+                    <li>
+                        <a class="dropdown-item" href="#">My profile</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">Settings</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">Logout</a>
+                    </li>
+                </ul>
+            </div>*@
 
-            <ul class="navbar-nav d-flex flex-row">
-                <!-- Icons -->
-                <li class="nav-item me-3 me-lg-0">
-                    <NavLink class="nav-link" href="registration">
-                        <i class="fa-solid fa-user-plus" style="font-size:20px;"></i>
-                    </NavLink>
-                </li>
-                <!-- Icon -->
-                <li class="nav-item me-3 me-lg-0">
-                    <NavLink class="nav-link" href="login">
-                        <i class="fa-solid fa-right-to-bracket" style="font-size:20px;"></i>
-                    </NavLink>
-                </li>
-            </ul>
         </div>
+        <!-- Right elements -->
+    </div>
+    <!-- Container wrapper -->
 </nav>
+<!-- Navbar -->
