--- a/TeslaRent_Client/_Imports.razor
+++ b/TeslaRent_Client/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using TeslaRent_Client
 @using TeslaRent_Client.Shared
+@using Models.ViewModels
+
+@using Blazored.LocalStorage
+@using TeslaRent_Client.Helpers
+@using Common
