--- a/TeslaRent_Client/Pages/Index.razor
+++ b/TeslaRent_Client/Pages/Index.razor
@@ -1,82 +1,88 @@
 ﻿@page "/"
 
+@*159. Внедряем зависимость в Index component*@
+@inject Blazored.LocalStorage.ILocalStorageService _localStorage
+
+@inject IJSRuntime _js
+@inject NavigationManager _navManager
+
 @*154. Редактируем разметку компонента Index.razor*@
 
 <!-- Carousel wrapper -->
-<div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
-    <!-- Indicators -->
-    <div class="carousel-indicators">
-        <button type="button"
-                data-mdb-target="#carouselBasicExample"
-                data-mdb-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"></button>
-        <button type="button"
-                data-mdb-target="#carouselBasicExample"
-                data-mdb-slide-to="1"
-                aria-label="Slide 2"></button>
-        <button type="button"
-                data-mdb-target="#carouselBasicExample"
-                data-mdb-slide-to="2"
-                aria-label="Slide 3"></button>
+    <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
+        <!-- Indicators -->
+        <div class="carousel-indicators">
+            <button type="button"
+                    data-mdb-target="#carouselBasicExample"
+                    data-mdb-slide-to="0"
+                    class="active"
+                    aria-current="true"
+                    aria-label="Slide 1"></button>
+            <button type="button"
+                    data-mdb-target="#carouselBasicExample"
+                    data-mdb-slide-to="1"
+                    aria-label="Slide 2"></button>
+            <button type="button"
+                    data-mdb-target="#carouselBasicExample"
+                    data-mdb-slide-to="2"
+                    aria-label="Slide 3"></button>
+        </div>
+
+        <!-- Inner -->
+        <div class="carousel-inner">
+            <!-- Single item -->
+            <div class="carousel-item active h-25">
+                <img src="https://images.hdqwalls.com/wallpapers/tesla-model-3-2017-lf.jpg" class="d-block w-100" alt="Sunset Over the City" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                </div>
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <img src="https://cimg1.ibsrv.net/ibimg/hgm/1920x1080-1/100/689/2018-tesla-model-3-performance_100689409.jpg" class="d-block w-100" alt="Canyon at Nigh" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <img src="https://cimg1.ibsrv.net/ibimg/hgm/1920x1080-1/100/624/frame-from-delivery-video-for-first-2017-tesla-model-3-in-texas_100624633.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Inner -->
+        <!-- Controls -->
+        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-
-    <!-- Inner -->
-    <div class="carousel-inner h-75">
-        <!-- Single item -->
-        <div class="carousel-item active">
-            <img src="https://www.tesla.com/sites/default/files/styles/event_image_2x_mobile_1280w_/public/2120x920-MS-MX-TX-Supercharger.jpg?itok=b68pq-gr&timestamp=1508515340" class="d-block w-100" style="max-height: 75vh; min-height: 75vh;" alt="Sunset Over the City" />
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-        </div>
-
-        <!-- Single item -->
-        <div class="carousel-item">
-            <img src="https://www.tesla.com/sites/default/files/styles/event_image_2x_mobile_1280w_/public/event-hero-00004.jpg?itok=7GzCKeF6&timestamp=1445468961" class="d-block w-100" style="max-height: 75vh; min-height: 75vh;" alt="Canyon at Nigh" />
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-        </div>
-
-        <!-- Single item -->
-        <div class="carousel-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/2020_Tesla_Model_Y%2C_front_8.1.20.jpg" class="d-block w-100" style="max-height: 75vh; min-height: 75vh;" alt="Cliff Above a Stormy Sea" />
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-        </div>
-    </div>
-    <!-- Inner -->
-    <!-- Controls -->
-    <button class="carousel-control-prev" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
 <!-- Carousel wrapper -->
 <!-- Rent Form -->
-<form>
-    <div class="row mt-4">
+<EditForm Model="indexVM" OnValidSubmit="SubmitHandler">
+    <div class="row mt-4 mb-4 d-flex justify-content-center px-5 border rounded py-5 mx-2 ">
 
         <div class="col-sm-12 col-md-5">
             <div class="form-group">
                 <label>Rent Date</label>
-                <input type="text" class="form-control" />
+                <InputDate class="form-control" min="@DateTime.Now.ToString("yyyy-MM-dd")" @bind-Value="indexVM.StartDate" />
             </div>
         </div>
         <div class="col-sm-12 col-md-3 px-2">
             <div class="form-group">
                 <label>Rent Days No.</label>
-                <select class="form-select">
+                <select class="form-select form-control" @bind="indexVM.RentDays">
                     @for (var i = 1; i < 31; i++)
                     {
                         <option value="@i">@i</option>
@@ -92,4 +98,23 @@
         </div>
 
     </div>
-</form>
+</EditForm>
+
+@code {
+    IndexVM indexVM = new();
+
+    async Task SubmitHandler()
+    {
+        try
+        {
+            indexVM.EndDate = indexVM.StartDate.AddDays(indexVM.RentDays);
+
+            await _localStorage.SetItemAsync(SD.LOCAL_INITIALBOOKING, indexVM);
+            _navManager.NavigateTo("cars/all", true);
+        }
+        catch (Exception e)
+        {
+            await _js.ToastrError(e.Message);
+        }
+    }
+}
