--- a/TeslaRent_Client/_Imports.razor
+++ b/TeslaRent_Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using Blazored.LocalStorage
 @using TeslaRent_Client.Helpers
 @using Common
+@using Models
+@using TeslaRent_Client.Services.IServices
