AllExistCars showing is implemented, User type fixed

--- a/TeslaRent_Client/Pages/Index.razor
+++ b/TeslaRent_Client/Pages/Index.razor
@@ -71,7 +71,7 @@
 <!-- Carousel wrapper -->
 <!-- Rent Form -->
 <EditForm Model="indexVM" OnValidSubmit="SubmitHandler">
-    <div class="row mt-4 mb-4 d-flex justify-content-center px-5 border rounded py-5 mx-2 ">
+    <div class="row mt-4 mb-4 d-flex justify-content-center px-5 border rounded py-5 mx-2" style="background-color: #ffffffe6;">
 
         <div class="col-sm-12 col-md-5">
             <div class="form-group">
