--- a/TeslaRent_Client/Shared/MainLayout.razor
+++ b/TeslaRent_Client/Shared/MainLayout.razor
@@ -1,6 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-    <NavMenu />
+<NavMenu />
 <main>
-    @Body
+    <div class="index-bg">
+        @Body
+    </div>
 </main>
