--- a/TeslaRent_Client/wwwroot/css/app.css
+++ b/TeslaRent_Client/wwwroot/css/app.css
@@ -66,3 +66,10 @@ a, .btn-link {
 .nav-item {
     padding-top: 5px !important;
 }
+
+.index-bg {
+    background-image: url("/Images/index_bg.jpg");
+    background-size: cover; 
+    background-attachment: fixed;
+    min-height: 94vh;
+}
