--- a/TeslaRent_Client/Pages/TeslaCars/TeslaCars.razor
+++ b/TeslaRent_Client/Pages/TeslaCars/TeslaCars.razor
@@ -62,7 +62,7 @@
         @*Добавляем цикл для вывода данных*@
         @foreach (var item in Cars)
         {
-            <div class="row p-2 my-3 d-flex align-items-center" style="border-radius: 20px; border: 1px groove #000; background-color: #ffffffe6;">
+            <div class="row p-2 mt-3 d-flex align-items-center" style="border-radius: 20px; border: 1px groove #000; background-color: #ffffffe6;">
                 <div class="col-12 col-lg-3 col-md-4">
                     <!-- Carousel wrapper -->
             <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
